Overflow hidden to stop horiz scroll due to fucking facebook

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,3 +1,7 @@
+.page-container {
+  overflow:hidden;
+}
+
 // Preloader styles
 .loading-overlay {
   position: fixed;
